--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world! ${{$TEST_VARIABLE}} ${{secrets.TEST_MY_SECRET}}
+        run: echo "${{$TEST_VARIABLE}}"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
