--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo "$GITHUB_CONTEXT"
+        run: echo '$GITHUB_CONTEXT'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
