--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -12,7 +12,9 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+env:
+  # Setting an environment variable with the value of a configuration variable
+  env_var: ${{ vars.TEST_VARIABLE }}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -27,7 +29,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo '${{env.TEST_VARIABLEdsdsdsdds}}'
+        run: echo '$env_var'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
