--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -29,7 +29,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo '$env_var'
+        run: echo ${{ vars.TEST_VARIABLE }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
